SF Primes/src/objects/IMP_ProjectLinksUrls__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SubProject URL values used by the Related External Entities and References(Impact Number, CMF, RMS Number, Contract, NIS and Opportunity Solution designs)</description>
    <fields>
        <fullName>HasFieldonProject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasFieldonProject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasFieldonSubproject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasFieldonSubproject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectFieldName__c</fullName>
        <description>field name of this entity inside Project__c</description>
        <label>ProjectFieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProjectFieldName__c</fullName>
        <description>field name of this entity inside SubProject__c</description>
        <label>SubProjectFieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Value__c</fullName>
        <label>URL Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>IMP_ProjectLinksUrls</label>
</CustomObject>